@@ -1,0 +1,9 @@
+Title: Logfile pattern analyser: pattern lists can now be searched
+Level: 1
+Component: wato
+Compatible: compat
+Version: 1.4.0i2
+Date: 1476279236
+Class: feature
+
+
